--- a/css/site.scss
+++ b/css/site.scss
@@ -1,3 +1,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+
+body {
+	background: #ccc url(images/tweed.png);
+}
+
+.container {
+	background: #fff;
+}
