pull content from github

--- a/template/page.html
+++ b/template/page.html
@@ -1,1 +1,3 @@
+<div class="alert alert-danger" ng-if="vm.error">{{vm.error}}</div>
 <a href="#/0.7">Back</a>
+<div markdown-to-html="vm.content" ng-if="vm.content"></div>
