--- a/template/toc.html
+++ b/template/toc.html
@@ -2,7 +2,7 @@
 <nav>
 	<ul>
 		<li><a href="#/0.7/overview">Overview</a></li>
-		<li><a href="#/0.7/installing">Installing</a></li>
+		<li><a href="#/0.7/install">Installing</a></li>
 		<li><a href="#/0.7/tools">Tools</a></li>
 		<li><a href="#/0.7/consumers">Consumers</a></li>
 		<li><a href="#/0.7/api">API</a></li>
